Worked on the form's validators.

--- a/Table/src/app/main/components/table/table.component.html
+++ b/Table/src/app/main/components/table/table.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
 
-  <nz-table #basicTable [nzData]="moviesList" [nzPageSize]="5">
+  <nz-table #basicTable [nzData]="moviesList" [nzPageSize]="8">
     <thead>
       <tr>
         <th nzLeft>Title</th>
@@ -71,42 +71,46 @@
   </nz-table>
 </div>
 
-<nz-modal [nzVisible]="isVisible" nzTitle="Add Item" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+<nz-modal [nzVisible]="isVisible" nzTitle="Add Item" [nzFooter]="modalFooter">
+  <ng-template #modalFooter>
+    <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
+    <button nz-button nzType="primary" (click)="handleOk()" [disabled]="isDisabled">OK</button>
+  </ng-template>
   <ng-container *nzModalContent>
     <nz-form [formGroup]="form" nzLayout="vertical">
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Title</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please enter a title!">
           <input nz-input formControlName="title" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Year</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please enter a year!">
           <input nz-input formControlName="year" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Runtime</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please enter a runtime!">
           <input nz-input formControlName="runtime" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Genre</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please specify the movie genre/s!">
           <input nz-input formControlName="genre" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Actors</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please specify a few members of the cast!">
           <input nz-input formControlName="actors" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Plot</nz-form-label>
-        <nz-form-control [nzSpan]="16">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Too short! Please describe the plot in at least 5 words!">
           <textarea nz-input formControlName="plot"></textarea>
         </nz-form-control>
       </nz-form-item>
@@ -118,13 +122,13 @@
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">Poster</nz-form-label>
-        <nz-form-control [nzSpan]="16" nzErrorTip="Please enter a valid URL for a JPG, JPEG, or PNG image">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Please enter a valid URL for a JPG, JPEG, or PNG image!">
           <input nz-input formControlName="poster" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label [nzSpan]="8">IMDB Rating</nz-form-label>
-        <nz-form-control [nzSpan]="16" nzErrorTip="Rating must be between 0 and 10">
+        <nz-form-control [nzSpan]="16" nzErrorTip="Rating must be between 0 and 10!">
           <input nz-input formControlName="imdbRating" type="number" step="0.1" />
         </nz-form-control>
       </nz-form-item>
