--- a/Table/src/app/main/components/table/table.component.scss
+++ b/Table/src/app/main/components/table/table.component.scss
@@ -20,6 +20,16 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   filter: grayscale(0);
   transition: filter 0.2s ease-in-out;
+  transition: all 0.3s ease-out; 
+}
+
+.image-card:active {
+  position: fixed;
+  top: 50%; /* move card to center vertically */
+  left: 50%; /* move card to center horizontally */
+  transform: translate(-50%, -50%) scale(2.5); /* scale up the card to 2.5 times its original size */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 999;
 }
 
 .image-card:hover {
