--- a/Table/src/app/main/components/header/header.component.html
+++ b/Table/src/app/main/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nz-page-header
   class="site-page-header"
   nzTitle="Movies"
-  nzSubtitle="Table"
+  nzSubtitle="This is a collection of my favorite movies and TV series"
 ></nz-page-header>
