--- a/Table/src/app/main/components/table/table.component.html
+++ b/Table/src/app/main/components/table/table.component.html
@@ -58,7 +58,7 @@
   </nz-table>
 </div>
 
-<nz-modal [nzVisible]="isVisible" nzTitle="Add / Edit Item" [nzFooter]="modalFooter">
+<nz-modal [nzVisible]="isVisible" nzTitle="Add / Edit Item" [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()">
   <ng-template #modalFooter>
     <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
     <button nz-button nzType="primary" (click)="handleOk()" [disabled]="isDisabled">OK</button>
