--- a/Table/src/app/main/components/table/table.component.html
+++ b/Table/src/app/main/components/table/table.component.html
@@ -4,7 +4,7 @@
       Sort By Rating
     </button>
     <button nz-button (click)="showModal()" nzType="primary">
-      Add New Movie
+      Add New Item
     </button>
   </div>
 
